# fls

./: Cargo.toml  build.rs
src/: cli.rs  directory.rs  main.rs  output.rs  time.rs
